@@ -1,3 +1,6 @@
+* [Bug 761] internal resolver does not seem to honor -4/-6 qualifiers
+*  Pass no_needed to ntp_intres as first part of fixing Bug 975.
+*  Add --enable-force-defer-DNS to help debugging.
 (4.2.5p249-RC) 2009/11/28 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1400] An empty KOD DB file causes sntp to coredump.
 * sntp: documentation cleanup.
